add todos, limit categories to fixed size
